[gd_scene load_steps=7 format=3 uid="uid://dyxf87ke44iry"]

[ext_resource type="Script" path="res://scene/instruction/InputOutput/ColorInstruction.gd" id="1_iqltj"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_6dd8e"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_5wvjs"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_2sghu"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_hjua8"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_80kdt"]

[node name="ColorInstruction" type="Panel"]
script = ExtResource("1_iqltj")

[node name="BaseRow" parent="." instance=ExtResource("2_6dd8e")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_5wvjs")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Draw"
script = ExtResource("4_2sghu")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_hjua8")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "Color		   r"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_80kdt")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "g"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_80kdt")]

[node name="Label3" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "b"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_80kdt")]

[node name="Label4" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "a"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput4" parent="BaseRow/BaseLineColor" instance=ExtResource("6_80kdt")]
